# recipe-tool

./: Makefile  pyproject.toml  recipe-tool-workspace.code-workspace
.gradio/flagged/: dataset1.csv
apps/doc-builder-v2/: Makefile  README.md  pyproject.toml
apps/doc-builder-v2/doc_builder_v2_app/: __init__.py  app.py
apps/doc-builder-v2/doc_builder_v2_app/static/css/: styles.css
apps/doc-builder-v2/doc_builder_v2_app/static/js/: script.js
apps/doc-constructor/: .gitignore  Makefile  README.md  README_original.md  pyproject.toml
apps/doc-constructor/doc_constructor_app/: __init__.py  app.py
apps/doc-constructor/doc_constructor_app/static/css/: styles.css
apps/doc-constructor/doc_constructor_app/static/js/: scripts.js
apps/doc-constructor/tests/: __init__.py  test_app.py
apps/document-generator/: Makefile  README.md  pyproject.toml
apps/document-generator-with-chat/: requirements.txt
apps/experimental/document-generator-v1/: pyproject.toml
apps/experimental/document-generator-v2/: Makefile
apps/experimental/recipe-creation-work/: docpack_recipe_helper.py  generate_outline_recipe_v1.json
apps/recipe-executor/: pyproject.toml
apps/recipe-executor/recipe_executor_app/: core.py
apps/recipe-tool/: pyproject.toml
apps/recipe-tool/recipe_tool_app/: app.py  core.py
mcp-servers/docs-server/: pyproject.toml
mcp-servers/python-code-tools/: pyproject.toml
mcp-servers/recipe-tool/: pyproject.toml
recipe-executor/recipe_executor/: context.py  executor.py  logger.py  main.py  models.py  protocols.py
(+27 files in other folders)
