[project]
name = "doc_builder_v2_app"
version = "0.1.0"
description = "A Gradio app for building documents with an enhanced interface"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "recipe-executor",
    "jsonschema",
    "python-dotenv"
]

[project.scripts]
doc-builder-v2 = "doc_builder_v2_app.app:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["doc_builder_v2_app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"